testsuite/tests/rep-poly/RepPolyDoBody1.stderr
RepPolyDoBody1.hs:24:3: error: [GHC-55287]
    • The first argument of the rebindable syntax operator ‘(>>)’
        arising from a do statement
      does not have a fixed runtime representation.
      Its type is:
        ma0 :: TYPE rep0
      When unifying:
        • mc0
        • ma
      Cannot unify ‘rep’ with the type variable ‘rep0’
      because the former is not a concrete ‘RuntimeRep’.
    • In a stmt of a 'do' block: undefined :: ma
      In the expression:
        do undefined :: ma
         return ()
      In an equation for ‘foo’:
          foo _
            = do undefined :: ma
               return ()

